--- a/login.html
+++ b/login.html
@@ -155,7 +155,7 @@
 
 
     <div class="tela">
-        <p> Fale conosco </p>
+        <p> Cadastre-se </p>
         <div class="formulario">
             <form>
                 <!-- Nome -->
