--- a/login.html
+++ b/login.html
@@ -161,11 +161,14 @@
                 <!-- Nome -->
                 <input type="text" class="tamanho" placeholder="Nome Completo:"> 
 
-                <!-- Senha -->
-                <input type="password" class="tamanho" placeholder="Senha:">
-
                 <!-- Email -->
-                <input type="text" class="tamanho" placeholder="Email:">
+                <input type="password" class="tamanho" placeholder="Email:">
+
+                <!-- Senha -->
+                <input type="text" class="tamanho" placeholder="Senha:">
+                
+                <!-- Confirme sua senha -->
+                <input type="text" class="tamanho" placeholder="Confirme sua Senha:">
 
                 <!-- Mesagem -->
                 <input type="text" class="tamanho" placeholder="Informe sua mensagem:"> 
