--- a/aula2.html
+++ b/aula2.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Header -->
     <header>
-        <a href="#"> <img src="img/logo.png" alt="Hotel Paraíso" class="imagem"> </a>
+        <a href="#"> <img src="img/logo.png" alt="Made in roça" class="imagem"> </a>
         <!-- Navbar -->
         <nav class="menu"> 
             <!-- Home -->
