--- a/aula2.html
+++ b/aula2.html
@@ -30,7 +30,7 @@
     </header>
 
     <!-- Selection -->
-    <p> Nossas acomodações </p>
+    <p> Nossos produtos </p>
     <section>
         <!-- Imagem 1 -->
         <div class="ima"> <img src="img/hero.jpg" alt="Hotel Paraíso" class="imagem"> <span> Legenda </span> </div>
